Page MenuHome GnuPG

Kleopatra: Progress bar in smartcard view does not disappear
Closed, ResolvedPublic

Description

With the new test version, on Windows with a signature card V2.0:
The progress bar for loading the certificates from the smartcard does not go away after loading is finished. It then shows on the Certificate and Notepad tabs, too. It only goes away when removing the smartcard and then restarting Kleopatra.

1605	1788.038046	3076	kleopatra.exe	org.kde.pim.kleopatra: ReaderStatusThread[2nd]: new iteration command= "__update__"  ; nullSlot= true
1606	1788.038221	3076	kleopatra.exe	org.kde.pim.kleopatra: update_cardinfo()
1607	1788.039540	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD SERIALNO"
1608	1788.047211	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD SERIALNO" failed: "No such device" (code: 32848, source: SCD)
1609	1788.047343	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD SERIALNO" : t == NULL
1610	1788.047406	3076	kleopatra.exe	org.kde.pim.kleopatra: update_cardinfo: No card present
1611	1788.048783	3076	kleopatra.exe	org.kde.pim.kleopatra: ReaderStatusThread[2nd]: waiting for commands
1612	1827.689422	3076	kleopatra.exe	org.kde.pim.kleopatra: ReaderStatusThread[GUI]::ping()
1613	1827.691382	3076	kleopatra.exe	org.kde.pim.kleopatra: ReaderStatusThread[2nd]: new iteration command= "__update__"  ; nullSlot= true
1614	1827.691706	3076	kleopatra.exe	org.kde.pim.kleopatra: update_cardinfo()
1615	1827.694537	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD SERIALNO"
1616	1827.846400	3076	kleopatra.exe	org.kde.pim.libkleo: "C:/Users/g10code.WIN-TEST3/AppData/Roaming/gnupg/reader_0.status"
1617	1827.846824	3076	kleopatra.exe	org.kde.pim.libkleo: "C:/Users/g10code.WIN-TEST3/AppData/Roaming/gnupg/reader_0.status"
1618	1827.846951	3076	kleopatra.exe	org.kde.pim.libkleo: newFiles ("C:/Users/g10code.WIN-TEST3/AppData/Roaming/gnupg/trustlist.txt")
1619	1827.847114	3076	kleopatra.exe	org.kde.pim.libkleo: adding
1620	1827.847114	3076	kleopatra.exe	  "C:/Users/g10code.WIN-TEST3/AppData/Roaming/gnupg/trustlist.txt" 
1621	1827.847114	3076	kleopatra.exe	/end
1622	1827.847394	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD SERIALNO" : got ( status( "SERIALNO" ) = "89490171500022806460" 
1623	1827.847394	3076	kleopatra.exe	 )
1624	1827.847429	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD SERIALNO"
1625	1827.848481	3076	kleopatra.exe	org.kde.pim.libkleo: "C:/Users/g10code.WIN-TEST3/AppData/Roaming/gnupg/reader_0.status"
1626	1827.848551	3076	kleopatra.exe	org.kde.pim.libkleo: "C:/Users/g10code.WIN-TEST3/AppData/Roaming/gnupg/reader_0.status"
1627	1827.848961	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD SERIALNO" : got ( status( "SERIALNO" ) = "89490171500022806460" 
1628	1827.848961	3076	kleopatra.exe	 )
1629	1827.848980	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD GETATTR APPTYPE"
1630	1827.849242	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD GETATTR APPTYPE" : got ( status( "APPTYPE" ) = "nks" 
1631	1827.849242	3076	kleopatra.exe	 )
1632	1827.849289	3076	kleopatra.exe	org.kde.pim.kleopatra: get_card_status( "89490171500022806460" , "nks" , 0x592b1b8 )
1633	1827.849329	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD GETATTR $SIGNKEYID"
1634	1827.849556	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD GETATTR $SIGNKEYID" : got ( status( "$SIGNKEYID" ) = "NKS-NKS3.4531" 
1635	1827.849556	3076	kleopatra.exe	 )
1636	1827.849588	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD GETATTR $ENCRKEYID"
1637	1827.849816	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD GETATTR $ENCRKEYID" : got ( status( "$ENCRKEYID" ) = "NKS-NKS3.45B1" 
1638	1827.849816	3076	kleopatra.exe	 )
1639	1827.849851	3076	kleopatra.exe	org.kde.pim.kleopatra: get_card_status: found Netkey card 89490171500022806460 end
1640	1827.849890	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD GETATTR NKS-VERSION"
1641	1827.850155	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD GETATTR NKS-VERSION" : got ( status( "NKS-VERSION" ) = "15" 
1642	1827.850155	3076	kleopatra.exe	 )
1643	1827.850196	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD GETATTR $DISPSERIALNO"
1644	1827.850613	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD GETATTR $DISPSERIALNO" : got ( status( "$DISPSERIALNO" ) = "8949017150002280646" 
1645	1827.850613	3076	kleopatra.exe	 )
1646	1827.850674	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD GETATTR CHV-STATUS"
1647	1827.951151	3076	kleopatra.exe	org.kde.pim.kleopatra: ReaderStatusThread[GUI]::ping()
1648	1827.999195	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD GETATTR CHV-STATUS" : got ( status( "CHV-STATUS" ) = "3 3 3 3" 
1649	1827.999195	3076	kleopatra.exe	 )
1650	1827.999255	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD LEARN --force"
1651	1828.850977	3076	kleopatra.exe	org.kde.pim.libkleo: Kleo::KeyCache(0x4c9e838) reload option: 0
1652	1828.852460	3076	kleopatra.exe	org.kde.pim.libkleo: KeyCache::RefreshKeysJob start
1653	1828.852603	3076	kleopatra.exe	org.kde.pim.libkleo: Kleo::KeyCache(0x4c9e838) reload option: 0
1654	1828.852750	3076	kleopatra.exe	org.kde.pim.libkleo: Kleo::KeyCache(0x4c9e838) reload - refresh already running
1655	1828.852906	3076	kleopatra.exe	org.kde.pim.libkleo: Kleo::KeyCache(0x4c9e838) reload option: 0
1656	1828.852973	3076	kleopatra.exe	org.kde.pim.libkleo: Kleo::KeyCache(0x4c9e838) reload - refresh already running
1657	1828.991659	3076	kleopatra.exe	org.kde.pim.libkleo: Kleo::KeyCache::RefreshKeysJob(0x5961008) RefreshKeysJob::done
1658	1828.993507	3076	kleopatra.exe	org.kde.pim.libkleo: readGroups Reading groups
1659	1830.541088	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD LEARN --force" : got ( status( "READER" ) = "SCM Microsystems Inc. SPRx32 USB Smart Card Reader 0" 
1660	1830.541088	3076	kleopatra.exe	 status( "SERIALNO" ) = "89490171500022806460" 
1661	1830.541088	3076	kleopatra.exe	 status( "APPTYPE" ) = "nks" 
1662	1830.541088	3076	kleopatra.exe	 status( "APPVERSION" ) = "F" 
1663	1830.541088	3076	kleopatra.exe	 status( "CHV-STATUS" ) = "3 3 3 3" 
1664	1830.541088	3076	kleopatra.exe	 status( "KEYPAIRINFO" ) = "4FE905D9AF633D134BB74109526CC762EC9BC8DC NKS-NKS3.4531 sa - brainpoolP256r1" 
1665	1830.541088	3076	kleopatra.exe	 status( "CERTINFO" ) = "101 NKS-NKS3.C000" 
1666	1830.541088	3076	kleopatra.exe	 status( "KEYPAIRINFO" ) = "9807C934B87DCAB103D5E8A4D69C3CFB600F75DA NKS-NKS3.45B1 e - brainpoolP256r1" 
1667	1830.541088	3076	kleopatra.exe	 status( "CERTINFO" ) = "101 NKS-NKS3.C200" 
1668	1830.541088	3076	kleopatra.exe	 status( "CERTINFO" ) = "111 NKS-NKS3.C20E" 
1669	1830.541088	3076	kleopatra.exe	 status( "CERTINFO" ) = "101 NKS-NKS3.C208" 
1670	1830.541088	3076	kleopatra.exe	 status( "KEYPAIRINFO" ) = "811564E41DF97BB799FF058E407CC88569BB7EEC NKS-NKS3.4571 a - brainpoolP256r1" 
1671	1830.541088	3076	kleopatra.exe	 status( "CERTINFO" ) = "101 NKS-NKS3.C500" 
1672	1830.541088	3076	kleopatra.exe	 status( "KEYPAIRINFO" ) = "FFEFC219B3698D26B46A376533EB91ADD4609C8C NKS-ESIGN.4531 s - brainpoolP256r1" 
1673	1830.541088	3076	kleopatra.exe	 status( "CERTINFO" ) = "101 NKS-ESIGN.C000" 
1674	1830.541088	3076	kleopatra.exe	 status( "CERTINFO" ) = "100 NKS-ESIGN.C001" 
1675	1830.541088	3076	kleopatra.exe	 status( "CERTINFO" ) = "111 NKS-ESIGN.C00E" 
1676	1830.541088	3076	kleopatra.exe	 )
1677	1830.541311	3076	kleopatra.exe	org.kde.pim.kleopatra: Card 89490171500022806460 info:
1678	1830.541496	3076	kleopatra.exe	org.kde.pim.kleopatra: READER : SCM Microsystems Inc. SPRx32 USB Smart Card Reader 0
1679	1830.541642	3076	kleopatra.exe	org.kde.pim.kleopatra: SERIALNO : 89490171500022806460
1680	1830.541765	3076	kleopatra.exe	org.kde.pim.kleopatra: APPTYPE : nks
1681	1830.541888	3076	kleopatra.exe	org.kde.pim.kleopatra: APPVERSION : F
1682	1830.542345	3076	kleopatra.exe	org.kde.pim.kleopatra: CHV-STATUS : 3 3 3 3
1683	1830.542532	3076	kleopatra.exe	org.kde.pim.kleopatra: KEYPAIRINFO : 4FE905D9AF633D134BB74109526CC762EC9BC8DC NKS-NKS3.4531 sa - brainpoolP256r1
1684	1830.542666	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 101 NKS-NKS3.C000
1685	1830.542794	3076	kleopatra.exe	org.kde.pim.kleopatra: KEYPAIRINFO : 9807C934B87DCAB103D5E8A4D69C3CFB600F75DA NKS-NKS3.45B1 e - brainpoolP256r1
1686	1830.542911	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 101 NKS-NKS3.C200
1687	1830.543058	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 111 NKS-NKS3.C20E
1688	1830.543182	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 101 NKS-NKS3.C208
1689	1830.543309	3076	kleopatra.exe	org.kde.pim.kleopatra: KEYPAIRINFO : 811564E41DF97BB799FF058E407CC88569BB7EEC NKS-NKS3.4571 a - brainpoolP256r1
1690	1830.543426	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 101 NKS-NKS3.C500
1691	1830.543558	3076	kleopatra.exe	org.kde.pim.kleopatra: KEYPAIRINFO : FFEFC219B3698D26B46A376533EB91ADD4609C8C NKS-ESIGN.4531 s - brainpoolP256r1
1692	1830.543704	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 101 NKS-ESIGN.C000
1693	1830.543821	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 100 NKS-ESIGN.C001
1694	1830.543948	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 111 NKS-ESIGN.C00E
1695	1830.544243	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "READKEY --card --no-data -- NKS-NKS3.4531"
1696	1830.880386	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "READKEY --card --no-data -- NKS-NKS3.4531" : got ( )
1697	1830.880513	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "READKEY --card --no-data -- NKS-NKS3.45B1"
1698	1831.187362	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "READKEY --card --no-data -- NKS-NKS3.45B1" : got ( )
1699	1831.187526	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "READKEY --card --no-data -- NKS-NKS3.4571"
1700	1831.497061	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "READKEY --card --no-data -- NKS-NKS3.4571" : got ( )
1701	1831.497200	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "READKEY --card --no-data -- NKS-ESIGN.4531"
1702	1831.999594	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "READKEY --card --no-data -- NKS-ESIGN.4531" : got ( )
1703	1831.999676	3076	kleopatra.exe	org.kde.pim.kleopatra: ReaderStatusThread: Card "89490171500022806460" with app "nks" was added
1704	1832.002190	3076	kleopatra.exe	org.kde.pim.kleopatra: ReaderStatus::getCard() - Found card with serial number "89490171500022806460" and app "nks"
1705	1832.002215	3076	kleopatra.exe	org.kde.pim.kleopatra: ReaderStatusThread[2nd]: new iteration command= "__update__"  ; nullSlot= true
1706	1832.002349	3076	kleopatra.exe	org.kde.pim.kleopatra: update_cardinfo()
1707	1832.002405	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD SERIALNO"
1708	1832.004082	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD SERIALNO" : got ( status( "SERIALNO" ) = "89490171500022806460" 
1709	1832.004082	3076	kleopatra.exe	 )
1710	1832.004108	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD SERIALNO"
1711	1832.004510	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD SERIALNO" : got ( status( "SERIALNO" ) = "89490171500022806460" 
1712	1832.004510	3076	kleopatra.exe	 )
1713	1832.004755	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD GETATTR APPTYPE"
1714	1832.004954	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD GETATTR APPTYPE" : got ( status( "APPTYPE" ) = "nks" 
1715	1832.004954	3076	kleopatra.exe	 )
1716	1832.005026	3076	kleopatra.exe	org.kde.pim.kleopatra: get_card_status( "89490171500022806460" , "nks" , 0x59d5db0 )
1717	1832.005063	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD GETATTR $SIGNKEYID"
1718	1832.005380	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD GETATTR $SIGNKEYID" : got ( status( "$SIGNKEYID" ) = "NKS-NKS3.4531" 
1719	1832.005380	3076	kleopatra.exe	 )
1720	1832.005493	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD GETATTR $ENCRKEYID"
1721	1832.005746	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD GETATTR $ENCRKEYID" : got ( status( "$ENCRKEYID" ) = "NKS-NKS3.45B1" 
1722	1832.005746	3076	kleopatra.exe	 )
1723	1832.005790	3076	kleopatra.exe	org.kde.pim.kleopatra: get_card_status: found Netkey card 89490171500022806460 end
1724	1832.005804	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD GETATTR NKS-VERSION"
1725	1832.006155	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD GETATTR NKS-VERSION" : got ( status( "NKS-VERSION" ) = "15" 
1726	1832.006155	3076	kleopatra.exe	 )
1727	1832.006210	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD GETATTR $DISPSERIALNO"
1728	1832.006475	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD GETATTR $DISPSERIALNO" : got ( status( "$DISPSERIALNO" ) = "8949017150002280646" 
1729	1832.006475	3076	kleopatra.exe	 )
1730	1832.006592	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD GETATTR CHV-STATUS"
1731	1832.033488	3076	kleopatra.exe	org.kde.pim.kleopatra: loadCertificates
1732	1832.033530	3076	kleopatra.exe	org.kde.pim.kleopatra: ReaderStatus::getCard() - Found card with serial number "89490171500022806460" and app "nks"
1733	1832.033748	3076	kleopatra.exe	org.kde.pim.kleopatra: loadCertificates Found certificate for card key "4FE905D9AF633D134BB74109526CC762EC9BC8DC" in cache: GpgME::Key("iOS Test-Smartcard iostest02.sc <iostest02.sc@bsi.bund.de> ? VS-NfD-konform (S/MIME, Erstellt: 15.11.2023)", fpr: 68D5DDDD1375F84579315FFBBC538356E99EEAFB)
1734	1832.033862	3076	kleopatra.exe	org.kde.pim.kleopatra: loadCertificates Found certificate for card key "9807C934B87DCAB103D5E8A4D69C3CFB600F75DA" in cache: GpgME::Key("iOS Test-Smartcard iostest02.sc <iostest02.sc@bsi.bund.de> ? VS-NfD-konform (S/MIME, Erstellt: 15.11.2023)", fpr: 87285EC2ABD22701562FA4793132922EA156C8BA)
1735	1832.033903	3076	kleopatra.exe	org.kde.pim.kleopatra: loadCertificates Did not find certificate for card key "811564E41DF97BB799FF058E407CC88569BB7EEC" in cache
1736	1832.034002	3076	kleopatra.exe	org.kde.pim.kleopatra: loadCertificates Found certificate for card key "FFEFC219B3698D26B46A376533EB91ADD4609C8C" in cache: GpgME::Key("8949017150002280646 ? VS-NfD-konform (S/MIME, Erstellt: 24.10.2019)", fpr: 5F357B58C8788D7E72A1DE2D4445A539F5A0F60B)
1737	1832.048589	3076	kleopatra.exe	org.kde.pim.kleopatra: startCertificateValidation Validating certificates std::vector(GpgME::Key("iOS Test-Smartcard iostest02.sc <iostest02.sc@bsi.bund.de> ? VS-NfD-konform (S/MIME, Erstellt: 15.11.2023)", fpr: 68D5DDDD1375F84579315FFBBC538356E99EEAFB), GpgME::Key("iOS Test-Smartcard iostest02.sc <iostest02.sc@bsi.bund.de> ? VS-NfD-konform (S/MIME, Erstellt: 15.11.2023)", fpr: 87285EC2ABD22701562FA4793132922EA156C8BA), GpgME::Key("8949017150002280646 ? VS-NfD-konform (S/MIME, Erstellt: 24.10.2019)", fpr: 5F357B58C8788D7E72A1DE2D4445A539F5A0F60B))
1738	1832.048734	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCard
1739	1832.049782	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCards - procotol: "S/MIME"
1740	1832.049838	3076	kleopatra.exe	org.kde.pim.kleopatra: ReaderStatusThread[GUI]::learnCardsCMS()
1741	1832.164755	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD GETATTR CHV-STATUS" : got ( status( "CHV-STATUS" ) = "3 3 3 3" 
1742	1832.164755	3076	kleopatra.exe	 )
1743	1832.165241	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "SCD LEARN --force"
1744	1832.236240	3076	kleopatra.exe	org.kde.pim.kleopatra: certificateValidationDone certificates: std::vector(GpgME::Key("iOS Test-Smartcard iostest02.sc <iostest02.sc@bsi.bund.de> ? VS-NfD-konform (S/MIME, Erstellt: 15.11.2023)", fpr: 87285EC2ABD22701562FA4793132922EA156C8BA), GpgME::Key("iOS Test-Smartcard iostest02.sc <iostest02.sc@bsi.bund.de> ? VS-NfD-konform (S/MIME, Erstellt: 15.11.2023)", fpr: 68D5DDDD1375F84579315FFBBC538356E99EEAFB), GpgME::Key("8949017150002280646 ? VS-NfD-konform (S/MIME, Erstellt: 24.10.2019)", fpr: 5F357B58C8788D7E72A1DE2D4445A539F5A0F60B))
1745	1834.598532	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "SCD LEARN --force" : got ( status( "READER" ) = "SCM Microsystems Inc. SPRx32 USB Smart Card Reader 0" 
1746	1834.598532	3076	kleopatra.exe	 status( "SERIALNO" ) = "89490171500022806460" 
1747	1834.598532	3076	kleopatra.exe	 status( "APPTYPE" ) = "nks" 
1748	1834.598532	3076	kleopatra.exe	 status( "APPVERSION" ) = "F" 
1749	1834.598532	3076	kleopatra.exe	 status( "CHV-STATUS" ) = "3 3 3 3" 
1750	1834.598532	3076	kleopatra.exe	 status( "KEYPAIRINFO" ) = "4FE905D9AF633D134BB74109526CC762EC9BC8DC NKS-NKS3.4531 sa - brainpoolP256r1" 
1751	1834.598532	3076	kleopatra.exe	 status( "CERTINFO" ) = "101 NKS-NKS3.C000" 
1752	1834.598532	3076	kleopatra.exe	 status( "KEYPAIRINFO" ) = "9807C934B87DCAB103D5E8A4D69C3CFB600F75DA NKS-NKS3.45B1 e - brainpoolP256r1" 
1753	1834.598532	3076	kleopatra.exe	 status( "CERTINFO" ) = "101 NKS-NKS3.C200" 
1754	1834.598532	3076	kleopatra.exe	 status( "CERTINFO" ) = "111 NKS-NKS3.C20E" 
1755	1834.598532	3076	kleopatra.exe	 status( "CERTINFO" ) = "101 NKS-NKS3.C208" 
1756	1834.598532	3076	kleopatra.exe	 status( "KEYPAIRINFO" ) = "811564E41DF97BB799FF058E407CC88569BB7EEC NKS-NKS3.4571 a - brainpoolP256r1" 
1757	1834.598532	3076	kleopatra.exe	 status( "CERTINFO" ) = "101 NKS-NKS3.C500" 
1758	1834.598532	3076	kleopatra.exe	 status( "KEYPAIRINFO" ) = "FFEFC219B3698D26B46A376533EB91ADD4609C8C NKS-ESIGN.4531 s - brainpoolP256r1" 
1759	1834.598532	3076	kleopatra.exe	 status( "CERTINFO" ) = "101 NKS-ESIGN.C000" 
1760	1834.598532	3076	kleopatra.exe	 status( "CERTINFO" ) = "100 NKS-ESIGN.C001" 
1761	1834.598532	3076	kleopatra.exe	 status( "CERTINFO" ) = "111 NKS-ESIGN.C00E" 
1762	1834.598532	3076	kleopatra.exe	 )
1763	1834.598609	3076	kleopatra.exe	org.kde.pim.kleopatra: Card 89490171500022806460 info:
1764	1834.598670	3076	kleopatra.exe	org.kde.pim.kleopatra: READER : SCM Microsystems Inc. SPRx32 USB Smart Card Reader 0
1765	1834.598713	3076	kleopatra.exe	org.kde.pim.kleopatra: SERIALNO : 89490171500022806460
1766	1834.598757	3076	kleopatra.exe	org.kde.pim.kleopatra: APPTYPE : nks
1767	1834.598810	3076	kleopatra.exe	org.kde.pim.kleopatra: APPVERSION : F
1768	1834.598866	3076	kleopatra.exe	org.kde.pim.kleopatra: CHV-STATUS : 3 3 3 3
1769	1834.598927	3076	kleopatra.exe	org.kde.pim.kleopatra: KEYPAIRINFO : 4FE905D9AF633D134BB74109526CC762EC9BC8DC NKS-NKS3.4531 sa - brainpoolP256r1
1770	1834.598977	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 101 NKS-NKS3.C000
1771	1834.599022	3076	kleopatra.exe	org.kde.pim.kleopatra: KEYPAIRINFO : 9807C934B87DCAB103D5E8A4D69C3CFB600F75DA NKS-NKS3.45B1 e - brainpoolP256r1
1772	1834.599064	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 101 NKS-NKS3.C200
1773	1834.599105	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 111 NKS-NKS3.C20E
1774	1834.599152	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 101 NKS-NKS3.C208
1775	1834.599231	3076	kleopatra.exe	org.kde.pim.kleopatra: KEYPAIRINFO : 811564E41DF97BB799FF058E407CC88569BB7EEC NKS-NKS3.4571 a - brainpoolP256r1
1776	1834.599274	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 101 NKS-NKS3.C500
1777	1834.599317	3076	kleopatra.exe	org.kde.pim.kleopatra: KEYPAIRINFO : FFEFC219B3698D26B46A376533EB91ADD4609C8C NKS-ESIGN.4531 s - brainpoolP256r1
1778	1834.599357	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 101 NKS-ESIGN.C000
1779	1834.599402	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 100 NKS-ESIGN.C001
1780	1834.599464	3076	kleopatra.exe	org.kde.pim.kleopatra: CERTINFO : 111 NKS-ESIGN.C00E
1781	1834.599514	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "READKEY --card --no-data -- NKS-NKS3.4531"
1782	1834.926943	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "READKEY --card --no-data -- NKS-NKS3.4531" : got ( )
1783	1834.927004	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "READKEY --card --no-data -- NKS-NKS3.45B1"
1784	1835.235263	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "READKEY --card --no-data -- NKS-NKS3.45B1" : got ( )
1785	1835.235354	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "READKEY --card --no-data -- NKS-NKS3.4571"
1786	1835.538166	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "READKEY --card --no-data -- NKS-NKS3.4571" : got ( )
1787	1835.538246	3076	kleopatra.exe	org.kde.pim.libkleo: sendCommand "READKEY --card --no-data -- NKS-ESIGN.4531"
1788	1836.055979	3076	kleopatra.exe	org.kde.pim.libkleo: sendStatusLinesCommand "READKEY --card --no-data -- NKS-ESIGN.4531" : got ( )
1789	1836.056822	3076	kleopatra.exe	org.kde.pim.kleopatra: ReaderStatusThread[2nd]: new iteration command= "__learn__"  ; nullSlot= true
1790	1836.057411	3076	kleopatra.exe	QObject::connect: Cannot queue arguments of type 'GpgME::Protocol'
1791	1836.057411	3076	kleopatra.exe	(Make sure 'GpgME::Protocol' is registered using qRegisterMetaType().)
1792	1836.059501	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCMSCards Running "C:\\Program Files (x86)\\GnuPG VS-Desktop\\GnuPG\\bin\\gpgsm.exe" "--learn-card -v"
1793	1836.091930	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCMSCards stderr: "gpgsm: enabled compatibility flags: allow-ecc-encr\r"
1794	1836.091957	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCMSCards stderr: ""
1795	1840.228577	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCMSCards stderr: "gpgsm: Das Zertifikat ist korrekt\r"
1796	1840.228651	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCMSCards stderr: "gpgsm: certificate ignored due to OID 1.3.6.1.4.1.311.20.2.2\r"
1797	1840.228679	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCMSCards stderr: ""
1798	1840.541336	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCMSCards stderr: "gpgsm: Das Zertifikat ist korrekt\r"
1799	1840.541490	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCMSCards stderr: ""
1800	1840.853747	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCMSCards stderr: "gpgsm: Das Zertifikat ist korrekt\r"
1801	1840.853794	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCMSCards stderr: ""
1802	1841.165328	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCMSCards stderr: "gpgsm: Das Zertifikat ist korrekt\r"
1803	1841.165370	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCMSCards stderr: ""
1804	1841.579883	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCMSCards stderr: "gpgsm: Das Zertifikat ist korrekt\r"
1805	1841.580180	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCMSCards stderr: ""
1806	1841.580310	3076	kleopatra.exe	org.kde.pim.kleopatra: learnCMSCards Running "C:\\Program Files (x86)\\GnuPG VS-Desktop\\GnuPG\\bin\\gpgsm.exe" "--learn-card -v" succeeded
1807	1841.582031	3076	kleopatra.exe	QObject::connect: Cannot queue arguments of type 'GpgME::Protocol'
1808	1841.582031	3076	kleopatra.exe	(Make sure 'GpgME::Protocol' is registered using qRegisterMetaType().)
1809	1841.582146	3076	kleopatra.exe	org.kde.pim.kleopatra: ReaderStatusThread[2nd]: waiting for commands

Details

Version
VS-Desktop-3.2.93.391-Beta

Event Timeline

ebo triaged this task as Normal priority.May 15 2024, 9:11 AM
ebo created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.May 16 2024, 10:32 AM
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Oct 1 2024, 3:55 PM
ebo moved this task from QA to vsd-3.3.0 on the vsd33 board.
ebo edited projects, added vsd33 (vsd-3.3.0); removed vsd33.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Haven't seen this in a while.

Setting it to resolved for VSD 3.3 and Gpg4win 4.4