Make GpgME::Protocol usable in queued connections

This fixes the connections to the ReaderStatusThread::startingLearnCards
and the ReaderStatusThread::cardsLearned signals which, among other
things, trigger the hiding of the progress widget shown while card
certificates are learned.

This fix is only needed for Qt 5.

GnuPG-bug-id: 7119